Bug fix, fb image but small, jumpstart logo (ru translation for title is missing), css minimization was done

--- a/missing_woman/assets/css/main.css
+++ b/missing_woman/assets/css/main.css
@@ -69,8 +69,9 @@ html, body
 }
 .wrapper
 {
+  position:fixed;
   display:inline-block;
-  visibility:hidden;
+  visibility:hidden;  
 }
 .loader
 {
@@ -309,7 +310,7 @@ html, body
 }
 .content .question2
 {
-  padding:40px 0px 20px;
+  padding:40px 0px 0px;
 }
 .content .question .button,.content .question2 .button
 {
@@ -1150,4 +1151,19 @@ html, body
    width:100%;
    height:100%;
    pointer-events: none;
+}
+.footer 
+{
+  width:100%;
+  text-align:right;
+}
+.footer a
+{
+  display:inline-block;
+  padding:10px 10px 10px 0px;
+}
+.footer .powered-by img
+{
+  width:72px;
+  height:15px;
 }
